# fairbuds

./: .gitignore  README.md  generate.sh  generate_app.sh  pyproject.toml
.github/workflows/: deploy-web.yml
docs/: web-bluetooth.md
measurements/: DHRME (main eq, ANC On).csv  DHRME (studio eq, ANC Off).csv  DHRME (studio eq, ANC On).csv  SoundGuys (main eq, ANC Off).csv
measurements/dhrme/: main_anc[1].csv  main_anc[2].csv  studio_anc[1].csv  studio_anc[2].csv
measurements/diy/: ear.md  main.csv  main_anc.csv  studio.csv  studio_anc.csv
measurements/soundguys/: chartData.json  data.json  data_target.json  delinearization_script.js  delinearization_script_target.js
notebooks/: compensate.ipynb  dhrme.ipynb  diy.ipynb  eq.ipynb  signature.ipynb  soundguys.ipynb  visualisation.ipynb
pex/: fairbuds.yaml  fairbuds_app.yaml
presets/: app10k.txt  app12.5k.txt  app12k.txt  app15k.txt  dhrme.txt  dhrme_anc.txt  main-ish.txt  max10k.txt  max11k.txt  max12.5k.txt  max12k.txt  max13.3k.txt  max15k.txt  max20k.txt  pre10k.txt  rtings.txt  rtings_app.txt  rtings_app_studio.txt  rtings_bass.txt  rtings_studio.txt  rtings_treble.txt  senorbackdoor.txt  soundguys.txt
presets_app/: dhrme.txt  dhrme_anc.txt  rtings.txt  soundguys.txt
results/DHRME (studio eq, ANC Off)/: DHRME (studio eq, ANC Off) GraphicEQ.txt  DHRME (studio eq, ANC Off) ParametricEQ.txt  DHRME (studio eq, ANC Off) fine-tuning.csv  DHRME (studio eq, ANC Off).csv  README.md
results/DHRME (studio eq, ANC On)/: DHRME (studio eq, ANC On) GraphicEQ.txt  DHRME (studio eq, ANC On) ParametricEQ.txt  DHRME (studio eq, ANC On) fine-tuning.csv  DHRME (studio eq, ANC On).csv  README.md
results/RTINGS (main eq, ANC Off)/: README.md  RTINGS (main eq, ANC Off) GraphicEQ.txt  RTINGS (main eq, ANC Off) ParametricEQ.txt  RTINGS (main eq, ANC Off) fine-tuning.csv  RTINGS (main eq, ANC Off).csv
results/SoundGuys (main eq, ANC Off)/: README.md  SoundGuys (main eq, ANC Off) GraphicEQ.txt  SoundGuys (main eq, ANC Off) ParametricEQ.txt  SoundGuys (main eq, ANC Off) fine-tuning.csv  SoundGuys (main eq, ANC Off).csv
results_app/DHRME (studio eq, ANC Off)/: DHRME (studio eq, ANC Off) GraphicEQ.txt  DHRME (studio eq, ANC Off) ParametricEQ.txt  DHRME (studio eq, ANC Off) fine-tuning.csv  DHRME (studio eq, ANC Off).csv  README.md
scripts/: compensate.py  preamp_optimiser.py
signatures/: dhrme.csv  diy.csv  manual.csv  reconstructed.csv  rtings_studio_eq.csv
targets/: SoundGuys Headphone Preference Curve.csv  jurf JM-1 DF (Tilt_ -0.9dB_Oct, B_ 10dB, 3kHz_ -1.5dB).tsv  listener JM-1 DF.tsv
web/: data.json  fairbuds.js  index.html
(+22 files in other folders)
