[project]
name = "fairbuds"
version = "0.1.0"
description = "BLE control tool for Fairphone Fairbuds EQ"
readme = "README.md"
requires-python = ">=3.10"
license.file = "LICENSE"
authors = [{ name = "Fairbuds Contributors" }]
keywords = ["bluetooth", "ble", "fairphone", "fairbuds", "equalizer", "audio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = ["bleak>=0.21.0"]

[project.scripts]
fairbuds = "fairbuds.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fairbuds"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
]
